*SVN*

* Deprecated UrlHelper#link_to_image and UrlHelper#link_to :post => true #6409 [BobSilva]

* Upgraded NumberHelper with number_to_phone support international formats to comply with ITU E.123 by supporting area codes with less than 3 digits, added precision argument to number_to_human_size (defaults to 1) #6421 [BobSilva]

* Fixed that setting RAILS_ASSET_ID to "" should not add a trailing slash after assets #6454 [BobSilva/chrismear]

* Force *_url named routes to show the host in ActionView [Rick]

  <%= url_for ... %> # no host
  <%= foo_path %>    # no host
  <%= foo_url %>     # host!

* Add support for converting blocks into function arguments to JavaScriptGenerator#call and JavaScriptProxy#call. [Sam Stephenson]

* Add JavaScriptGenerator#literal for wrapping a string in an object whose #to_json is the string itself. [Sam Stephenson]

* Add <%= escape_once html %> to escape html while leaving any currently escaped entities alone.  Fix button_to double-escaping issue. [Rick]

* Fix double-escaped entities, such as &amp;amp;, &amp;#123;, etc. [Rick]

* Fix deprecation warnings when rendering the template error template. [Nicholas Seckar]

* Fix routing to correctly determine when generation fails. Closes #6300. [psross].

* Fix broken assert_generates when extra keys are being checked. [Jamis Buck]

* Replace KCODE checks with String#chars for truncate.  Closes #6385 [Manfred Stienstra]

* Make page caching respect the format of the resource that is being requested even if the current route is the default route so that, e.g. posts.rss is not transformed by url_for to '/' and subsequently cached as '/index.html' when it should be cached as '/posts.rss'.  [Marcel Molina Jr.]

* Use String#chars in TextHelper::excerpt. Closes #6386 [Manfred Stienstra]

* Install named routes into ActionView::Base instead of proxying them to the view via helper_method. Closes #5932. [Nicholas Seckar]
