@@ -1,11 +1,10 @@
 require File.dirname(__FILE__) + '/../abstract_unit'
 
-require File.dirname(__FILE__) + '/../../lib/action_view/helpers/tag_helper'
-require File.dirname(__FILE__) + '/../../lib/action_view/helpers/url_helper'
-
 class TagHelperTest < Test::Unit::TestCase
   include ActionView::Helpers::TagHelper
   include ActionView::Helpers::UrlHelper
+  include ActionView::Helpers::TextHelper
+  include ActionView::Helpers::CaptureHelper
 
   def test_tag
     assert_equal "<p class=\"show\" />", tag("p", "class" => "show")
@@ -33,6 +32,18 @@ class TagHelperTest < Test::Unit::TestCase
     assert_equal "<a href=\"create\">Create</a>", content_tag("a", "Create", "href" => "create")
     assert_equal content_tag("a", "Create", "href" => "create"),
                  content_tag("a", "Create", :href => "create")
+  end
+  
+  def test_content_tag_with_block
+    _erbout = ''
+    content_tag(:div) { _erbout.concat "Hello world!" }
+    assert_dom_equal "<div>Hello world!</div>", _erbout
+  end
+  
+  def test_content_tag_with_block_and_options
+    _erbout = ''
+    content_tag(:div, :class => "green") { _erbout.concat "Hello world!" }
+    assert_dom_equal %(<div class="green">Hello world!</div>), _erbout
   end
   
   def test_cdata_section
